# YrFight

./: .gitignore  CMakeLists.txt  README.md  mainEditor.yr  mainGame.yr  yreditor  yrfight
common/: #screen.yr#  .#screen.yr  drawable.yr  eventHandler.yr  jsonobject.yr  resource.yr  screen.yr
common/lib/: file.yr  jsonParser.yr  jsonWriter.yr  sdl.yr  sdlttf.yr  signal.yr
common/lib/parser/: lexer.yr  parser.yr  token.yr  tokenList.yr
common/lib/parser/tools/: file.yr
common/sprite/: animation.yr  sprite.yr  spritedrawable.yr  spriteitem.yr  spritemanager.yr  spritesheet.yr
editor/: #eventHandler.yr#  .#eventHandler.yr  editor.yr  eventHandler.yr
game/: collision.yr  eventHandler.yr  game.yr  movement.yr  player.yr
img/: test.png.json
